--- a/lib/generators/geoblacklight/templates/settings.yml
+++ b/lib/generators/geoblacklight/templates/settings.yml
@@ -61,8 +61,8 @@ WMS_PARAMS:
   :REQUEST: 'GetFeatureInfo'
   :STYLES: ''
   :SRS: 'EPSG:4326'
-  :EXCEPTIONS: 'application/json'
   :INFO_FORMAT: 'text/html'
+  #:EXCEPTIONS: 'application/json' # use default of application/vnd.ogc.se_xml, as some servers don't support application/json
 
 # Settings for leaflet 
 OPACITY_CONTROL: &opacity_control
